# MitoR2

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Aplicativos/BancoDados/: CMakeLists.txt
Aplicativos/BancoDados/Source/: main.cpp
Aplicativos/Controle/: CMakeLists.txt  recursos.qrc
Aplicativos/Controle/Gui/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Aplicativos/Controle/Interface/: CMakeLists.txt
Aplicativos/Controle/Interface/Controle/: IControle.hpp
Aplicativos/Controle/Modulos/: CMakeLists.txt
Aplicativos/Controle/Modulos/Cadastro/: CMakeLists.txt
Aplicativos/Controle/Modulos/Cadastro/Gui/: formcadastrarclassificacoesmateriais.cpp  formcadastrarclassificacoesmateriais.hpp  formcadastrarclassificacoesmateriais.ui  formcadastrarempresa.cpp  formcadastrarempresa.hpp  formcadastrarempresa.ui  formcadastrarformatomateriais.cpp  formcadastrarformatomateriais.hpp  formcadastrarformatomateriais.ui  formcadastrarmateriais.cpp  formcadastrarmateriais.hpp  formcadastrarmateriais.ui  formcadastrarplanoconta.cpp  formcadastrarplanoconta.hpp  formcadastrarplanoconta.ui  formcadastrartiposmateriais.cpp  formcadastrartiposmateriais.hpp  formcadastrartiposmateriais.ui  formcadastrarunidadesmedidas.cpp  formcadastrarunidadesmedidas.hpp  formcadastrarunidadesmedidas.ui
Aplicativos/Controle/Modulos/Cadastro/Interface/: CMakeLists.txt
Aplicativos/Controle/Modulos/Cadastro/Interface/Cadastro/: ICadastro.hpp
Aplicativos/Controle/Modulos/Cadastro/Source/: Plugin.cpp  Plugin.hpp
Aplicativos/Controle/Modulos/ModuloAB/: CMakeLists.txt  ModuloAB.json
Aplicativos/Controle/Modulos/ModuloAB/Source/: Plugin.cpp  Plugin.hpp
Aplicativos/Controle/Modulos/ModuloTemplate/: CMakeLists.txt  ModuloTemplate.json
Aplicativos/Controle/Modulos/ModuloTemplate/Source/: Plugin.cpp  Plugin.hpp
Aplicativos/Controle/Modulos/Producao/: CMakeLists.txt  Producao.json
Aplicativos/Controle/Modulos/Producao/Gui/: formcadastrartipospropostas.cpp  formcadastrartipospropostas.hpp  formcadastrartipospropostas.ui  formorcamento.cpp  formorcamento.hpp  formorcamento.ui
Aplicativos/Controle/Modulos/Producao/Interface/: CMakeLists.txt
Aplicativos/Controle/Modulos/Producao/Interface/Producao/: IProducao.hpp
Aplicativos/Controle/Modulos/Producao/Source/: Plugin.cpp  Plugin.hpp
Aplicativos/Controle/Modulos/Sessao/: CMakeLists.txt  Sessao.json
Aplicativos/Controle/Modulos/Sessao/Gui/: dialogsessao.cpp  dialogsessao.hpp  dialogsessao.ui  formgerenciarusuarios.cpp  formgerenciarusuarios.hpp  formgerenciarusuarios.ui
Aplicativos/Controle/Modulos/Sessao/Interface/: CMakeLists.txt
Aplicativos/Controle/Modulos/Sessao/Interface/Sessao/: IAcesso.hpp  ISessao.hpp
Aplicativos/Controle/Modulos/Sessao/Source/: Plugin.cpp  Plugin.hpp  acesso.cpp  acesso.hpp
Aplicativos/Controle/Source/: main.cpp
Aplicativos/Teste/: CMakeLists.txt
Aplicativos/Teste/Source/: main.cpp
BancoDados/: controle.txt  controle_sem_roles.txt
Bck/: controle.sql
Bibliotecas/Configuracao/Source/: CMakeLists.txt  Configuracao.cpp
Bibliotecas/Configuracao/Source/Include/MitoR/: Configuracao.hpp
Bibliotecas/Global/Interface/: CMakeLists.txt
Bibliotecas/Global/Interface/MitoR/: LinkedRelation.hpp  MitoR.hpp
Bibliotecas/Gui/Source/: CMakeLists.txt  callbackpaintdelegate.cpp  dialogpesquisar.cpp  dialogpesquisar.ui  dialogpesquisarct.cpp  dialogpesquisarct.ui  dialogpesquisartabela.cpp  dialogpesquisartabela.ui  eventfiltermudancafocus.cpp  gui.cpp  keyeventfilter.cpp  relationaliddelegate.cpp
Bibliotecas/Gui/Source/Include/MitoR/Gui/: callbackpaintdelegate.hpp  dialogpesquisar.hpp  dialogpesquisarct.hpp  dialogpesquisartabela.hpp  eventfiltermudancafocus.hpp  gui.hpp  keyeventfilter.hpp  relationaliddelegate.hpp
Bibliotecas/Log/Source/: CMakeLists.txt  log.cpp
Bibliotecas/Log/Source/Include/MitoR/: Log.hpp
Bibliotecas/Modulos/Source/: CMakeLists.txt  Modulo.cpp
Bibliotecas/Modulos/Source/Include/MitoR/: IPlugin.hpp  IServico.hpp  Modulo.hpp
Bibliotecas/Recursos/Source/: AdaptadorJson.cpp  CMakeLists.txt  Recursos.cpp
Bibliotecas/Recursos/Source/Include/MitoR/: AdaptadorJson.hpp  Recursos.hpp
Bibliotecas/Sql/Source/: CMakeLists.txt  operacao.cpp  sqlnucleo.cpp  tabelactsql.cpp  tabelasql.cpp  validarentrada.cpp
Bibliotecas/Sql/Source/Include/MitoR/Sql/: operacao.hpp  sqlnucleo.hpp  tabelactsql.hpp  tabelasql.hpp  validarentrada.hpp
Cofre/: 2024-01-02.md  2024-01-03.md  2024-01-04.md
Cofre/.obsidian/: app.json  appearance.json  workspace.json
Cofre/.obsidian/snippets/: formatacao.css
Cofre/Controle/.obsidian/: app.json  appearance.json  workspace.json
Cofre/Controle/Diario/: 2023-11-28.md  2023-12-10.md  2023-12-27.md
Cofre/Controle/Projeto Controle/: Cadastro.md  Compras.md  Controle.md  PostgreSQL.md  Producao.md  Projetos.md  RESUMO.md
Cofre/Diario/: 2023-12-19.md  2023-12-27.md  2024-01-02.md  2024-01-04.md  2024-01-08.md  2024-01-09.md  2024-01-12.md  2024-01-13.md  2024-01-14.md
Docs/Aprendizado/: book.toml
Docs/Aprendizado/src/: BancoDadosPostgreSQL.md  SUMMARY.md
Docs/Controle/: book.toml
Docs/Controle/Estudo/: Perguntas sobre QT.txt  VBA Excel.txt
Docs/Controle/ModeloSQL/: controle.dbm
Docs/Controle/book/: 404.html  Cadastro.html  Controle.html  PostgreSQL.html  Producao.html  index.html  print.html  searchindex.js  searchindex.json
Docs/Controle/src/: Cadastro.md  Compras.md  PostgreSQL.md  Producao.md  Projetos.md  SUMMARY.md
